--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
