--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
     "bootstrap": "^5.3.8",
     "next": "15.5.4",
     "react": "19.1.0",
@@ -22,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.1.25",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
