--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
+    "sweetalert2": "^11.23.0",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
