--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "bootstrap": "^5.3.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
+    "recharts": "^2.15.4",
     "sweetalert2": "^11.23.0",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -28,6 +33,7 @@
     "@types/react-dom": "^19",
     "daisyui": "^5.1.25",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
