--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
