--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
+    "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.545.0",
+    "mongoose": "^8.19.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "sweetalert2": "^11.23.0",
     "swiper": "^12.0.2",
@@ -30,6 +36,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
