--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
