--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
@@ -29,6 +30,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "sweetalert2": "^11.23.0",
