--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "sweetalert2": "^11.23.0",
