--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui/material": "^7.3.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.9.1",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.2.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
@@ -37,6 +39,7 @@
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
+    "stripe": "^19.2.0",
     "sweetalert2": "^11.23.0",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1"
